# myapp

./: .clippy.toml  .commitlintrc.js  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .rustfmt.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  EXAMPLE.md  Makefile  demo.ps1  demo.sh  justfile  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: cd.yml  ci.yml
.trae/rules/: 工程化规范.md  开发流程规范.md  架构方案.md
.trae/skills/project-init/: SKILL.md
.trae/skills/rust-engineering/: SKILL.md
crates/application/: Cargo.toml
crates/application/src/: dto.rs  error.rs  lib.rs  port.rs  service.rs
crates/backend/: Cargo.toml
crates/backend/src/: api.rs  di.rs  main.rs  middleware.rs
crates/backend/src/api/: handlers.rs  routes.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs  types.rs  utils.rs
crates/database/: Cargo.toml
crates/database/migrations/: 20260520000001_init.sql
crates/database/src/: lib.rs  postgres.rs  redis.rs  sqlite.rs
crates/domain/: Cargo.toml
crates/domain/src/: aggregate.rs  error.rs  event.rs  lib.rs  port.rs  service.rs  value_object.rs
crates/frontend/: Cargo.toml
crates/frontend/src/: components.rs  main.rs  pages.rs  state.rs
docker/: Dockerfile  docker-compose.prod.yml  docker-compose.yml
