[workspace]
members = [
    "crates/domain",
    "crates/application",
    "crates/backend",
    "crates/database",
    "crates/frontend",
    "crates/common",
]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"
authors = ["Dreamer <835831088@qq.com>"]
license = "MIT"
repository = "https://github.com/yinzlin/myapp"

[workspace.dependencies]
# Tokio 异步运行时
tokio = { version = "1.43", features = ["full"] }
# Axum Web 框架
axum = "0.8"
# Tower 中间件库
tower = "0.5"
# Tower HTTP 扩展
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
# SQLx 数据库框架
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "sqlite",
    "chrono",
    "uuid",
] }
# Redis 客户端
redis = { version = "0.27", default-features = false, features = [
    "tokio",
    "tokio-comp",
    "connection-manager",
] }
# serde 序列化框架
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# tracing 日志追踪
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Anyhow 错误处理
anyhow = "1.0"
# Thiserror 错误定义
thiserror = "2.0"
# UUID 生成
uuid = { version = "1.0", features = ["v4", "serde"] }
# Chrono 时间处理
chrono = { version = "0.4", features = ["serde"] }
# Dioxus 前端框架
dioxus = "0.6"
dioxus-web = "0.6"
# Reqwest HTTP 客户端
reqwest = { version = "0.12", features = ["json"] }
# async-trait 异步 trait
async-trait = "0.1"

domain = { path = "crates/domain" }
application = { path = "crates/application" }
database = { path = "crates/database" }
common = { path = "crates/common" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
