[package]
name = "backend"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "backend"
path = "src/main.rs"

[dependencies]
domain = { workspace = true }
application = { workspace = true }
database = { workspace = true }
common = { workspace = true }
axum.workspace = true
tower.workspace = true
tower-http = { workspace = true, features = ["cors", "trace"] }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
thiserror.workspace = true
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { workspace = true, features = ["serde"] }
anyhow.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
