[package]
name = "backend"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "backend"
path = "src/main.rs"

[[bin]]
name = "demo_client"
path = "src/bin/demo_client.rs"

[dependencies]
domain = { workspace = true }
application = { workspace = true }
database = { workspace = true }
common = { workspace = true }
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true
reqwest.workspace = true
