[package]
name = "database"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
domain = { workspace = true }
common = { workspace = true }
sqlx.workspace = true
redis.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
async-trait.workspace = true
