[package]
name = "domain"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
common = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { workspace = true, features = ["serde"] }
async-trait = "0.1"

[dev-dependencies]
