[package]
name = "frontend"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "frontend"
path = "src/main.rs"

[dependencies]
common = { workspace = true }
dioxus.workspace = true
dioxus-web.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
uuid.workspace = true
